apps/platform/airflow/base/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-airflow
  labels:
    platform.jaccloud.nl/tenant: platform
