apps/platform/airflow/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: airflow
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: airflow
