apps/platform/airflow/base/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: airflow.dev.jac.dot
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow
                port:
                  number: 8080
